--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,8 @@ block content
     div.goods
       h1 Hello #{title}
       p Welcome to Yeon's Shop #{title} !!!
+      i(class="fa-solid fa-magnifying-glass search_icon",style="position:relative;color:black;top:5px;left:4px;")
   div 
     a(href="/users/logout") Logout 
+    
 
