add Product View

--- a/views/Mall.jade
+++ b/views/Mall.jade
@@ -8,9 +8,8 @@ block content
       
         div(style="display:flex;flex-direction:column;width:200px;height:200px;")
             div
-                button(style="position:relative;width:70px;height:50px;",onclick='location.href=`./myproduct/upload`',class="btn btn-info") 上架
-            div
+            
+        
     
-    
-          script(src="/javascripts/myProduct.js") 
+          script(src="/javascripts/Mall.js") 
             
