--- a/views/guestHeader.jade
+++ b/views/guestHeader.jade
@@ -1,5 +1,5 @@
 div.users 
     div 
-        a(href="/users/login") 登入
+        a(class="user_a" href="/users/login") 登入
     div 
-        a(href="/users/register") 註冊 
+        a(class="user_a" href="/users/register") 註冊 
