--- a/views/layout.jade
+++ b/views/layout.jade
@@ -26,14 +26,13 @@ html
             block users
               div.users 
                 div 
-                    a(href="/users/login") 登入
+                    a(class="user_a" href="/users/login") 登入
                 div 
-                    a(href="/users/register") 註冊     
+                    a(class="user_a" href="/users/register") 註冊     
       
                                                                             
       br
       br 
-      br
       block content
         div.content
           div.goods
@@ -41,7 +40,7 @@ html
             p Welcome to Yeon's Shop #{title} !!!
             i(class="fa-solid fa-magnifying-glass")
             div 
-              a(href="/users/logout") Logout
+
             div 
               
 
