--- a/views/users.jade
+++ b/views/users.jade
@@ -6,8 +6,7 @@ block content
     div.content
         div.goods
             h1 Hello #{title}
-            p Welcome to Yeon's Shopsadasdsa !!!
-            div 
-                a(href="/users/logout") Logout 
+            p Welcome to Yeon's Shop!!!
+
                 
               
