--- a/views/userHeader.jade
+++ b/views/userHeader.jade
@@ -1,7 +1,9 @@
 div.users 
     div(style="font-size:20px;height:15px;")
         h6 
-            a(href="/products/myproduct" style="width:100px;") My Product
+            a(class="user_a" href="/products/myproduct" style="width:100px;") My Product
     div
         h5(style="margin:5px") Hello #{username}
+        h5
+            a(class="user_a",href="/users/logout") Logout 
      
