--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -13,7 +13,7 @@
       <div id="header">
         <div id="title"> <a href="/" class="normaltextlink"><span style="color:aqua">Yeon's  </span>Shop </a></div>
         <div id="search"> 
-          <form action="/products" method="get"> 
+          <form action="/search" method="get"> 
             <div class="searchinput">
               <div>
                 <input type="text" placeholder="請輸入欲搜尋商品" name="productName" style="border:0px;height:25px;width:700px;z-index:-1;">
