add Comment View and Post Comment

--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -53,6 +53,12 @@
               <h4 id="Product_Content">內容</h4>
             </p>
           </div>
+          <div>
+            <form method="get" action="/Comment">
+              <input type="hidden" name="productID" id="productID" value="">
+              <button type="submit" class="btn btn-primary">觀看歷史評論</button>
+            </form>
+          </div>
         </div>
       </div>
       <script src="/javascripts/Product.js"> </script>
