--- a/views/Comment.ejs
+++ b/views/Comment.ejs
@@ -1,184 +1,85 @@
+
 <!doctype html>
 <html lang="en">
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="http://localhost:3000/stylesheets/boot.css">
+        <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
+        <script src="/javascripts/font-awesome.js"></script>
+        <script src="/javascripts/axios.min.js"></script>
+        <script src="/javascripts/jquery.js"> </script>
         <title>評論管理</title>
     </head>
-    <body> 
-        <script>var a = 0;</script> 
-        <!-- <a href="test_upload.html">123</a> -->
-        <div class="container" >
-            <h1 class="text-center mt-3 mb-3"><%= title %></h1>
-            
-            <% if(action == 'add') { %>
-                
-            <div class="card">
-                <div class="card-header">
-
-                    <div class="ds_history">
-                        <script>
-                            document.getElementById('histort_content_add').style.display = 'none';
-                        </script>
+    <body>
+        <div id="header">
+            <div id="title"> <a href="/" class="normaltextlink"><span
+                        style="color:aqua">Yeon's </span>Shop </a></div>
+            <div id="search">
+                <form action="/search" method="get">
+                    <div class="searchinput">
+                        <div>
+                            <input type="text" placeholder="請輸入欲搜尋商品"
+                                name="productName"
+                                style="border:0px;height:25px;width:700px;z-index:-1;">
+                        </div>
+                        <div style="width:25px;height:35px;">
+                            <button type="submit"
+                                style="padding-top:3px;padding-left:5px;padding-right:6px;padding-bottom:3px;"
+                                class="btn btn-primary"><i class="fas
+                                    fa-search"></i></button>
+                        </div>
                     </div>
-
-                </div>
-                <div class="card-body">
-                    <form method="POST" action="/sample_data/add_sample_data">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label>使用者</label>
-                                    <input type="text" name="first_name" id="first_name" class="form-control" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label>留言內容</label>
-                                    <input type="text" name="age" id="age" class="form-control" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <input type="submit" name="submit_button" class="btn btn-primary" value="新增留言"
-                            onclick="
-                                var content =  document.getElementById('age').value;
-                                if(content.length > 30){
-                                    document.getElementById('age').value = '';
-                                    alert('字數限制30字');
-
-                                }
-                            "
-                            />
-                        </div>
-                    </form>
-                </div>
+                </form>
             </div>
-
-            <% } else if(action == 'edit') { %>
-            <div class="card">
-                <div class="card-header">
-                    <div class="ds_history">
-                        <script>
-                            document.getElementById('histort_content_add').style.display = 'none';
-                        </script>
-                    </div>
-
-
-                </div>
-                <div class="card-body">
-                    <form method="POST" action="/sample_data/edit/<%= sampleData.id %>">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label>使用者</label>
-                                    <input type="text" name="first_name" id="first_name" class="form-control" value="<%= sampleData.name %>" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="mb-3">
-                                    <label>留言內容</label>
-                                    <input type="text" name="age" id="age" class="form-control" value="<%= sampleData.content %>" />
-                                </div>
-                            </div>
-                        </div>
-                        <div class="mb-3">
-                            <input type="submit" name="submit_button" class="btn btn-primary" value="修改"
-                                onclick="
-                                var content =  document.getElementById('age').value;
-                                if(content.length > 30){
-                                    document.getElementById('age').value = '';
-                                    alert('字數限制30字');
-
-                                }
-                                "
-                            />
-                        </div>
-                    </form>
-                    <script>
-                    document.getElementById('gender').value="<%= sampleData.gender %>";
-                    </script>
-                </div>
+            <div class="users" id="user">
+                <div> <a href="/users/login" class="user_a">登入</a></div>
+                <div> <a href="/users/register" class="user_a">註冊 </a></div>
             </div>
-            <% } else { %>
-                
-            <div class="card">
-                <div class="card-header">
-                    <div class="row">
-                        <div class="col">
-                            <!-- Sample Data -->
-                            <div class="histort_content" >
-                                <!-- <script>var a = 0;</script>  -->
-                                <button id="histort_content_display_btn" type="submit" onclick="
-                                if(a%2 == 0){
-                                    document.getElementById('history_content_ds').style.display = 'block';
-                                    a ++;
-                                }
-                                else{
-                                    document.getElementById('history_content_ds').style.display = 'none';
-                                    a ++;
-                                };" style="background-color: rgb(134, 27, 192) ;color: antiquewhite;border-radius: 5px;">歷史評論</button>
-                            </div>
+            <script src="/javascripts/cookie.js"></script>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <div class="row">
+                    <div class="col">
+                        <!-- Sample Data -->
+                        <div class="histort_content">
+                            <!-- <script>var a = 0;</script>  -->
+                            <button id="histort_content_display_btn"
+                                type="submit" onclick=""
+                                style="background-color: rgb(134, 27,
+                                192);color: antiquewhite;border-radius: 5px;">歷史評論</button>
+                        </div>
 
-                        </div>
-                        <div class="col">
-                            <a href="/sample_data/add" class="btn btn-success btn-sm float-end">新增留言</a>
-                        </div>
                     </div>
-                </div>
-                <div class="card-body" style="display: none;" id="history_content_ds">
-                    <div class="table-responsive">
-                        <table class="table table-bordered">
-                            <tr>
-                                <th>使用者</th>
-                                <th>留言日期</th>
-                                <th>留言內容</th>
-                                <!-- <th>Gender</th> -->
-                                <th>Action</th>
-                            </tr>
-                            <%
-                            if(sampleData.length > 0)
-                            {
-                                sampleData.forEach(function(data){
-                            %>
-                            <tr>
-                                <td><%= data.name %></td>
-                                <td><%= data.date %></td>
-                                <td><%= data.content %></td>
-                                <!-- <td><%= data.gender %></td> -->
-                                <td>
-                                    <a href="/sample_data/edit/<%= data.id %>" class="btn btn-primary btn-sm">Edit</a>
-                                    <a href="/sample_data/delete/<%= data.id %>" class="btn btn-danger btn-sm">Delete</a>
-                                </td>
-                            </tr>
-                            <%
-                                });
-                            }
-                            else
-                            {
-                            %>
-                            <tr>
-                                <td colspan="5">No Data Found</td>
-                            </tr>
-                            <%
-                            }
-                            %>
-                        </table>
+                    <div class="col" >
+                        <h3 id="productName">
+                           
+                        </h3>
+                    </div>
+                    <div class="col">
+                        <a id="add_Comment" class="btn btn-success btn-sm float-end">新增留言</a>
                     </div>
                 </div>
             </div>
 
-            <% } %>
+            <div class="card-body" 
+                id="history_content_ds">
+                <div class="table-responsive">
+                    <table class="table table-bordered" id="History_Content">
+                        <tr>
+                            <th>使用者</th>
+                            <th>留言日期</th>
+                            <th>留言內容</th>
+                        </tr>
 
-        </div> 
 
+                    </table>
+                </div>
+            </div>
+        </div>
+        <script src="/javascripts/Comment.js"></script>
     </body>
 </html>
