--- a/views/add_Comment.ejs
+++ b/views/add_Comment.ejs
@@ -39,6 +39,7 @@
                 <div> <a href="/users/login" class="user_a">登入</a></div>
                 <div> <a href="/users/register" class="user_a">註冊 </a></div>
             </div>
+            <div id="Cart"><a href="/Cart" id="myCart">我的購物車</a></div>
             <script src="/javascripts/cookie.js"></script>
         </div>
         <h1 id="title_add_Comment">新增評論</h1>
