--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,6 +29,14 @@
           <div> <a href="/users/login" class="user_a">登入</a></div>
           <div> <a href="/users/register" class="user_a">註冊     </a></div>
         </div>
+        <div id="Cart"><a href="/Cart" id="myCart">我的購物車</a></div>
+        <div>
+          <div>
+            <a>
+              <i></i>
+            </a>
+          </div>
+        </div>
         <script src="/javascripts/cookie.js"></script>
       </div><br><br>
       <div class="content">
