--- a/views/search.ejs
+++ b/views/search.ejs
@@ -66,6 +66,7 @@
               <div> <a href="/users/login" class="user_a">登入</a></div>
               <div> <a href="/users/register" class="user_a">註冊     </a></div>
             </div>
+            <div id="Cart"><a href="/Cart" id="myCart">我的購物車</a></div>
            
           </div><br><br>
           <div><h4 id="myproduct_userhint"></h4></div>
