--- a/views/Mall.ejs
+++ b/views/Mall.ejs
@@ -28,6 +28,8 @@
           <div> <a href="/users/login" class="user_a">登入</a></div>
           <div> <a href="/users/register" class="user_a">註冊     </a></div>
         </div>
+        
+        <div id="Cart"><a href="/Cart" id="myCart">我的購物車</a></div>
       </div><br><br>
       <div><h4 id="seller_name"></h4></div>
       <script src="/javascripts/cookie.js"></script>
