--- a/views/Product.ejs
+++ b/views/Product.ejs
@@ -4,61 +4,103 @@
     <title id="page_title">Yeon's Shop</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/bootstrap.icon.css">
+    <link rel="stylesheet" href="/stylesheets/Product.css">
+    <link rel="stylesheet" href="/stylesheets/toastr.min.css">
     <script src="/javascripts/font-awesome.js"></script>
     <script src="/javascripts/axios.min.js"></script>
     <script src="/javascripts/jquery.js"> </script>
+    <script src="/javascripts/toastr.min.js"></script>
   </head>
-  <body>
+  <body style="background-color:#f5f5f5">
+
     <div>
       <div id="header">
-        <div id="title"> <a href="/" class="normaltextlink"><span style="color:aqua">Yeon's  </span>Shop </a></div>
-        <div id="search"> 
-          <form action="/search" method="get"> 
+        <div id="title"> <a href="/" class="normaltextlink"><span
+              style="color:aqua">Yeon's </span>Shop </a></div>
+        <div id="search">
+          <form action="/search" method="get">
             <div class="searchinput">
               <div>
-                <input type="text" placeholder="請輸入欲搜尋商品" name="productName" style="border:0px;height:25px;width:700px;z-index:-1;">
+                <input type="text" placeholder="請輸入欲搜尋商品" name="productName"
+                  style="border:0px;height:25px;width:700px;z-index:-1;">
               </div>
               <div style="width:25px;height:35px;">
-                <button type="submit" style="padding-top:3px;padding-left:5px;padding-right:6px;padding-bottom:3px;" class="btn btn-primary"><i class="fas fa-search"></i></button>
+                <button type="submit"
+                  style="padding-top:3px;padding-left:5px;padding-right:6px;padding-bottom:3px;"
+                  class="btn btn-primary"><i class="fas fa-search"></i></button>
               </div>
             </div>
           </form>
         </div>
-        <div class="users" id="user"> 
+        <div class="users" id="user">
           <div> <a href="/users/login" class="user_a">登入</a></div>
           <div> <a href="/users/register" class="user_a">註冊</a></div>
         </div>
+        <div id="Cart"><a href="/Cart" id="myCart">我的購物車</a></div>
         <script src="/javascripts/cookie.js"></script>
       </div><br><br>
       <link rel="stylesheet" href="/stylesheets/MyProduct.css">
       <div class="content">
-        <div class="goods"> 
-          <div style="display:flex;flex-direction:row;"> 
+        <div class="goods">
+          <div
+            style="background-color:white;display:flex;flex-direction:row;margin:50px;">
             <div> <img id="Product_Image"></div>
             <div>
-              <div> 
-                <h1 id="Product_Name"> </h1>
-              </div>
-              <div> 
-                <h1 id="Product_Price"></h1>
-              </div>
+              <ul class="ul_Product">
+                <li>
+                  <h2 id="Product_Name"> </h2>
+                </li>
+                <li>
+                  <h2 id="Product_Price"></h2>
+                </li>
+                <div class="productPageGood">
+                  <li>
+                    <div style="display:flex;flex-direction: row;">
+                      <div style="width:50px;">
+                        <h5>數量:</h5>
+                      </div>
+                      <div>
+                        <input type="number" id="Amount" name='Amount' min="1"
+                          max="10">
+                      </div>
+                    </div>
+                  </li>
+                </div>
+                <li>
+                  <div  class="productPageGood" >
+                    <div>
+                        <button type="button" id="Cart_add">加入購物車</button>
+                    </div>
+                    <div>
+                      <button type="button" id="Product_Buy">直接購買</button>
+                    </div>
+                  </div>
+                  
+                </li>
+              </ul>
             </div>
           </div>
-          <div style="height:100px;"> 
-            <h2>商場:<a id="Upload_User_Mall"> </a></h2>
+          <div class="goodDiv">
+            <div style="height:100px;">
+              <h2>商場:<a id="Upload_User_Mall"> </a></h2>
+            </div>
+            <div>
+              <h2>商品內容: </h2>
+              <p>
+                <h4 id="Product_Content">內容</h4>
+              </p>
+            </div>
+            <div>
+              <form method="get" action="/Comment">
+                <input type="hidden" name="productID" id="productID" value="">
+                <button type="submit" class="btn btn-primary">觀看歷史評論</button>
+              </form>
+            </div>
           </div>
-          <div>
-            <h2>商品內容: </h2>
-            <p>
-              <h4 id="Product_Content">內容</h4>
-            </p>
-          </div>
-          <div>
-            <form method="get" action="/Comment">
-              <input type="hidden" name="productID" id="productID" value="">
-              <button type="submit" class="btn btn-primary">觀看歷史評論</button>
-            </form>
-          </div>
+
+
+
         </div>
       </div>
       <script src="/javascripts/Product.js"> </script>
