--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,9 @@
     <title>Homepage | Yeon's Shop</title>
     <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" href="/stylesheets/homepage.css">
+    <link rel="stylesheet" href="/stylesheets/homepage_title.css">
+    <link rel="stylesheet" href="/stylesheets/homepage_second.css">
     <script src="/javascripts/font-awesome.js"></script>
     <script src="/javascripts/axios.min.js"></script>
     <script src="/javascripts/jquery.js"> </script>
@@ -30,22 +33,44 @@
           <div> <a href="/users/register" class="user_a">註冊     </a></div>
         </div>
         <div id="Cart"><a href="/Cart" id="myCart">我的購物車</a></div>
-        <div>
-          <div>
-            <a>
-              <i></i>
-            </a>
-          </div>
-        </div>
+
         <script src="/javascripts/cookie.js"></script>
-      </div><br><br>
-      <div class="content">
-        <div class="goods">
-          <h1>Hello </h1>
-          <p>Welcome to Yeon's Shop !!!</p><i style="position:relative;color:black;top:5px;left:4px;" class="fa-solid fa-magnifying-glass search_icon"></i>
+      </div><br>
+      <div class="focus">
+        <div class="goods_title" >
+
+
+        </div>
+        <div class="goods_second" >
+          <div class="second_left">
+            <div class="today1" >
+
+            </div>
+            <div class="today2">
+ 
+            </div>
+          </div>
+
+          <div class="second_right" >
+            <div class="today3" >
+
+            </div>
+            <div class="today4" >
+
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+
+      <div class="contents">        
+        <div class="all_goodss"> 
         </div>
       </div>
-      <div> </div>
     </div>
+    
   </body>
+  <script src="/javascripts/goods.js"> </script>
 </html>
