--- a/public/stylesheets/Product.css
+++ b/public/stylesheets/Product.css
@@ -5,3 +5,19 @@
     width: 900px;
 }
 
+#Cart_add{
+    border-radius: 5px;
+}
+#Product_Buy{
+    border-radius: 5px;
+}
+#Amount{
+    border-radius: 5px;
+
+}
+#Product_Image{
+    border-radius: 5px;
+}
+.goodDiv{
+    border-radius: 5px;
+}
