--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -52,17 +52,19 @@
     /* border: 3px solid rgb(2, 2, 2); */
 }
 .product_div{
-    width: 200px;
-    height: 250px;
+    width: 195px;
+    height: 245px;
+    background-color: rgb(222, 209, 146);
+    border-radius: 5px;
 
 
     /* border: 3px solid rgb(2, 2, 2); */
 
 }
-.contents::before{
+/* .contents::before{
     content: "";
     width:90px;
-}
+} */
 .contents{
     display: flex;
     flex-direction: row;
@@ -81,10 +83,10 @@
     display: flex;
     margin-bottom: 40px;
 }
-.goods_title::before{
+/* .goods_title::before{
     content: "";
     width:60px;
-}
+} */
 .goods_title{
     /* border: 5px solid rgb(0, 0, 0);
     border-radius: 5px; */
@@ -113,7 +115,7 @@
 .today1{
     /*border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;*/
-
+    width: 100%;
     height: 50%;
     flex: 1;
 }
