--- a/public/stylesheets/homepage_second.css
+++ b/public/stylesheets/homepage_second.css
@@ -1,6 +1,6 @@
 
 .second_goods_div{
-    width: 60%;
+    width: 100%;
     height: 100%;
     /* background-color: aqua; */
 
@@ -9,8 +9,10 @@
 .second_info_div{
     width: 100%;
     height: 20%;
-    border-radius: 1px;
+    border-radius: 6px;
     border: 1px solid rgb(2, 2, 2);
+    background-color: rgb(222, 209, 146);
+
 }
 
 .second_img_div{
