--- a/public/stylesheets/homepage_title.css
+++ b/public/stylesheets/homepage_title.css
@@ -1,16 +1,17 @@
 .title_goods_div{
-    width: 70%;
+    width: 100%;
     height: 100%;
     margin-left: 40px;
     /* background-color: aqua; */
-
+    border-radius: 6px;
     border: 3px solid rgb(2, 2, 2); 
 }
 .title_info_div{
     width: 100%;
-    height: 20%;
+    height: 19%;
     border-radius: 5px;
     border: 3px solid rgb(2, 2, 2);
+    background-color: rgb(222, 209, 146);
 }
 
 .title_img_div{
@@ -18,7 +19,7 @@
     /* margin-left: 22px; */
     /* border: 3px solid rgb(0, 0, 0); */
     border-radius: 5px;
-    width: 99%;
+    width: 100%;
     height: 420px;
 }
 .title_price_div{
