--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -3,13 +3,13 @@ body {
   border:0px;
   display:flex;
   flex-direction: column;
-  background-color: #f5f5f5!important;
+  background-color: #7e7979!important;
 }
-
+/* 
 #header::before{
   width:30px;
   content: "    ";
-}
+} */
 
 
 #header{
@@ -17,7 +17,7 @@ body {
   display:flex;
   flex-direction: row;
   background-color: purple;
-  width:1540px;
+  width:100%;
   height:40px;
   z-index: 0;
 }
@@ -26,18 +26,19 @@ body {
   margin: 0px;
   border:0px;
   font-size: 30px;
-  width:200px;
+  width:15%;
   height:40px;
   display:flex;
-  flex-direction: row;
-  align-items: center;
+  /* flex-direction: row; */
+  text-align: center;
+  /* align-items: center; */
 
 }
 #header #search{
   display:flex;
   align-items:center;
   color:azure;
-  width: 900px;
+  width: 100%;
   height: 40px;
 }
 #header #search .searchinput{
@@ -45,26 +46,44 @@ body {
   align-items:center;
   flex-direction: row;
   border-width: 0px;
+  width: 100%;
   
 }
+#header .center_seach{
+  text-align: center;
+  width: 70%;
+}
+#header .form_search_width{
+  width: 100%;
+}
+#header .search_text_div{
+  width: 100%;
+}
+#header .text_input_box{
+  width: 100%;
+}
 #header .users{
-  right:150px;
+  /* right:150px; */
   display: flex;
   flex-direction: column;
-  width: 70px;
+  width: 15%;
   height:40px;
+  text-align: center;
 }
+
 #header .users div{
   display: flex;
 flex-direction: row;
 font-size: 15px;
+text-align: center;
+
   
 }
-#header .users div::after{
+/* #header .users div::after{
 content:" ";
 width:10px;
 
-}
+} */
 
 .content::before{
   content:"  ";
@@ -174,6 +193,7 @@ width:10px;
 .user_a{
   color:whitesmoke;
   text-decoration: none;
+  width: 100%;
 }
 
 .productPageGood{
@@ -183,6 +203,9 @@ width:10px;
 
 .ul_Product{
   list-style-type:none;
+}
+.ul_Product #Product_Name{
+  font-weight: bold;
 }
 
 #myCart{
